documentation/apis/v1/provable-api.info.mdx
---
id: provable-api
title: "Provable API"
description: ":::warning"
sidebar_label: Introduction
sidebar_position: 0
hide_title: true
custom_edit_url: null
---

import ApiLogo from "@theme/ApiLogo";
import Heading from "@theme/Heading";
import SchemaTabs from "@theme/SchemaTabs";
import TabItem from "@theme/TabItem";
import Export from "@theme/ApiExplorer/Export";

<span
  className={"theme-doc-version-badge badge badge--secondary"}
  children={"Version: 1.0.0"}
>
</span>

<Export
  url={"https://raw.githubusercontent.com/AleoNet/welcome/refs/heads/master/documentation/apis/apis_v1.yaml"}
  proxy={undefined}
>
  
</Export>

<Heading
  as={"h1"}
  className={"openapi__heading"}
  children={"Provable API"}
>
</Heading>



:::warning
Version 1 API is outdated and will be deprecated soon. Please migrate to v2 for more endpoints and improved response codes.
:::
The Provable API is designed to provide users with access to the Aleo blockchain through RESTful endpoints that allow one to query the network for block level information, transactions, transitions, and more. Developers can easily interact directly with Aleo through both retrieving data as well as broadcasting transactions.

## API Base URLs

| Environment  | URL                                         |
|--------------|---------------------------------------------|
| Mainnet API  | https://api.explorer.provable.com/v1/mainnet |
| Testnet API  | https://api.explorer.provable.com/v1/testnet |
| Canary API   | https://api.explorer.provable.com/v1/canary  |

## Rate Limiting

Users are allowed to perform **5 requests per second** and up to **100,000 requests per day**.

Rate limiting will be enforced and users are subject to blacklisting if they abuse the use of our API. For inquiries into obtaining higher rate limits, please reach out at devservices@provable.com. 


<div
  style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}
>
  <h3
    style={{"marginBottom":"0.25rem"}}
  >
    Contact
  </h3><span>
    API Support: [devservices@provable.com](mailto:devservices@provable.com)
  </span>
</div>
      